--- a/index.html
+++ b/index.html
@@ -1,425 +1,253 @@
-> Amma:
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Full Stack Developer Portfolio</title>
-    <style>
-        /* Reset and Basic Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
+<meta charset="UTF-8">
+<title>AutoGo – Book an Auto</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        /* Header Styles */
-        header {
-            background: linear-gradient(135deg, #007bff, #00c6ff);
-            color: white;
-            text-align: center;
-            padding: 100px 0;
-            position: relative;
-            overflow: hidden;
-        }
-        header::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(255,255,255,0.2) 0%, transparent 60%);
-            animation: pulse 5s infinite;
-        }
-        @keyframes pulse {
-            0% { transform: scale(1); opacity: 1; }
-            100% { transform: scale(1.5); opacity: 0; }
-        }
-        .profile-img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 5px solid white;
-            margin-bottom: 20px;
-            animation: fadeIn 2s ease-in-out;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-50px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
-            animation: slideInLeft 1.5s ease-out;
-        }
-        @keyframes slideInLeft {
-            from { transform: translateX(-100%); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
-        header p {
-            font-size: 1.5em;
-            animation: slideInRight 1.5s ease-out;
-        }
-        @keyframes slideInRight {
-            from { transform: translateX(100%); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
+<style>
+:root {
+  --bg: #f4f6f8;
+  --card: #ffffff;
+  --text: #222;
+  --primary: #0a66ff;
+  --secondary: #25D366;
+}
 
-        /* Navigation */
-        nav {
-            background: #333;
-            color: white;
-            padding: 10px 0;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-        nav ul {
-            list-style: none;
-            text-align: center;
-        }
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-        nav ul li a:hover {
-            color: #007bff;
-        }
+body.dark {
+  --bg: #121212;
+  --card: #1e1e1e;
+  --text: #eee;
+}
 
-        /* Section Styles */
-        section {
-            padding: 60px 0;
-            text-align: center;
-        }
-        section h2 {
-            font-size: 2.5em;
-            margin-bottom: 40px;
-            position: relative;
-        }
-        section h2::after {
-            content: '';
-            width: 50px;
-            height: 3px;
-            background: #007bff;
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: var(--bg);
+  color: var(--text);
+}
 
-        /* About Section */
-        #about p {
-            max-width: 800px;
-            margin: 0 auto 20px;
-            animation: fadeInUp 1s ease-in-out;
-        }
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(50px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+/* Header */
+header {
+  background: linear-gradient(90deg, #0a66ff, #25D366);
+  color: white;
+  padding: 20px;
+  text-align: center;
+  animation: slide 6s infinite;
+}
 
-> Amma:
-/* Skills Section */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 20px;
-        }
-        .skill {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .skill:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-        }
-        .skill i {
-            font-size: 3em;
-            color: #007bff;
-            margin-bottom: 10px;
-        }
+@keyframes slide {
+  0% {opacity:1}
+  50% {opacity:0.7}
+  100% {opacity:1}
+}
 
-        /* Projects Section */
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-        .project {
-            background: white;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
-        }
-        .project:hover {
-            transform: scale(1.05);
-        }
-        .project img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-        .project-info {
-            padding: 20px;
-        }
-        .project-info h3 {
-            margin-bottom: 10px;
-        }
-        .project-info a {
-            display: inline-block;
-            margin-top: 10px;
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-        }
+/* Controls */
+.controls {
+  display: flex;
+  gap: 10px;
+  padding: 15px;
+}
 
-        /* Contact Section */
-        #contact form {
-            max-width: 600px;
-            margin: 0 auto;
-            text-align: left;
-        }
-        #contact input, #contact textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        #contact button {
-            background: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        #contact button:hover {
-            background: #0056b3;
-        }
+.controls input {
+  flex: 1;
+  padding: 10px;
+}
 
-        /* Footer */
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-        .social-links a {
-            color: white;
-            margin: 0 10px;
-            font-size: 1.5em;
-            transition: color 0.3s;
-        }
-        .social-links a:hover {
-            color: #007bff;
-        }
-    </style>
-    <!-- Include Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+/* Grid */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 15px;
+  padding: 15px;
+}
+
+.card {
+  background: var(--card);
+  border-radius: 10px;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  cursor: pointer;
+}
+
+.card img {
+  width: 100%;
+  border-radius: 8px;
+  height: 160px;
+  object-fit: cover;
+}
+
+.badge {
+  display: inline-block;
+  padding: 4px 8px;
+  font-size: 12px;
+  border-radius: 4px;
+  margin-top: 5px;
+}
+
+.online { background: #25D366; color: white; }
+.offline { background: gray; color: white; }
+
+.buttons a {
+  display: block;
+  text-align: center;
+  margin-top: 6px;
+  padding: 8px;
+  border-radius: 6px;
+  color: white;
+  text-decoration: none;
+}
+
+.whatsapp { background: #25D366; }
+.call { background: #0a66ff; }
+
+/* Modal */
+.modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+}
+
+.modal-content {
+  background: var(--card);
+  margin: 10% auto;
+  padding: 20px;
+  max-width: 400px;
+  border-radius: 10px;
+}
+
+/* Footer */
+footer {
+  text-align: center;
+  padding: 15px;
+  font-size: 14px;
+}
+
+/* Mobile Sticky Bar */
+.sticky {
+  display: none;
+}
+
+@media(max-width:600px) {
+  .sticky {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: white;
+    border-top: 1px solid #ccc;
+  }
+  .sticky a {
+    flex: 1;
+    padding: 12px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+  }
+}
+</style>
 </head>
+
 <body>
 
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+<header>
+  <h1>AutoGo 🚖</h1>
+  <p>Fast • Reliable • Safe</p>
+  <button onclick="toggleDark()">🌙 Dark Mode</button>
+</header>
 
-    <header>
-        <img src="https://via.placeholder.com/150?text=Profile" alt="Profile Image" class="profile-img">
-        <h1>John Doe</h1>
-        <p>Full Stack Developer | Building Innovative Web Solutions</p>
-    </header>
+<div class="controls">
+  <input id="search" placeholder="Search by area..." onkeyup="render()">
+</div>
 
-    <section id="about" class="container">
-        <h2>About Me</h2>
-        <p>As a passionate Full Stack Developer, I specialize in creating robust and scalable web applications using modern technologies. With expertise in both front-end and back-end development, I enjoy turning complex problems into elegant solutions.</p>
-        <p>My journey in tech started with [your story here]. I thrive on continuous learning and contributing to open-source projects.</p>
-    </section>
+<div class="grid" id="grid"></div>
 
-> Amma:
-<section id="skills" style="background: #fff;">
-        <div class="container">
-            <h2>Skills</h2>
-            <div class="skills-grid">
-                <div class="skill">
-                    <i class="fab fa-html5"></i>
-                    <p>HTML5</p>
-                </div>
-                <div class="skill">
-                    <i class="fab fa-css3-alt"></i>
-                    <p>CSS3</p>
-                </div>
-                <div class="skill">
-                    <i class="fab fa-js"></i>
-                    <p>JavaScript</p>
-                </div>
-                <div class="skill">
-                    <i class="fab fa-react"></i>
-                    <p>React</p>
-                </div>
-                <div class="skill">
-                    <i class="fab fa-node-js"></i>
-                    <p>Node.js</p>
-                </div>
-                <div class="skill">
-                    <i class="fas fa-database"></i>
-                    <p>MongoDB</p>
-                </div>
-                <!-- Add more skills as needed -->
-            </div>
+<!-- Modal -->
+<div class="modal" id="modal" onclick="closeModal()">
+  <div class="modal-content" onclick="event.stopPropagation()">
+    <h3 id="mName"></h3>
+    <p id="mArea"></p>
+    <p id="mRating"></p>
+    <textarea id="pickup" placeholder="Pickup location"></textarea><br><br>
+    <textarea id="drop" placeholder="Drop location"></textarea><br><br>
+    <button onclick="sendBooking()">Send Booking via WhatsApp</button>
+  </div>
+</div>
+
+<footer>
+  <a href="#">Privacy</a> • <a href="#">Terms</a> • <a href="#">Contact</a>
+  <p>© 2025 AutoGo</p>
+</footer>
+
+<script>
+const drivers = [
+  {
+    name: "mathina",
+    area: "Railway Station",
+    phone: "919578841839",
+    rating: 4.5,
+    available: true,
+    photo: "https://images.unsplash.com/photo-1618828665931-22e9db06d1e3"
+  },
+  {
+    name: "Imran Khan",
+    area: "Bus Stand",
+    phone: "919999888777",
+    rating: 4.2,
+    available: false,
+    photo: "https://images.unsplash.com/photo-1593941707882-a5bac686f0e9"
+  }
+];
+
+let selected = null;
+
+function render() {
+  const q = search.value.toLowerCase();
+  grid.innerHTML = "";
+  drivers.filter(d => d.area.toLowerCase().includes(q))
+  .forEach(d => {
+    grid.innerHTML += `
+      <div class="card" onclick="openModal(${drivers.indexOf(d)})">
+        <img src="${d.photo}">
+        <h3>${d.name}</h3>
+        <p>${d.area}</p>
+        <span class="badge ${d.available?'online':'offline'}">
+          ${d.available?'Available':'Offline'}
+        </span>
+        <p>⭐ ${d.rating}</p>
+        <div class="buttons">
+          <a class="whatsapp" href="https://wa.me/${d.phone}" onclick="event.stopPropagation()">WhatsApp</a>
+          <a class="call" href="tel:${d.phone}" onclick="event.stopPropagation()">Call</a>
         </div>
-    </section>
+      </div>`;
+  });
+}
 
-    <section id="projects" class="container">
-        <h2>Projects</h2>
-        <div class="projects-grid">
-            <div class="project">
-                <img src="https://via.placeholder.com/300x200?text=Project+1" alt="Project 1">
-                <div class="project-info">
-                    <h3>Project One</h3>
-                    <p>A full-stack web app built with React and Node.js. Features include user authentication and real-time updates.</p>
-                    <a href="#">View Project</a>
-                </div>
-            </div>
-            <div class="project">
-                <img src="https://via.placeholder.com/300x200?text=Project+2" alt="Project 2">
-                <div class="project-info">
-                    <h3>Project Two</h3>
-                    <p>An e-commerce platform with payment integration and admin dashboard.</p>
-                    <a href="#">View Project</a>
-                </div>
-            </div>
-            <!-- Add more projects as needed -->
-        </div>
-    </section>
+function openModal(i){
+  selected = drivers[i];
+  mName.innerText = selected.name;
+  mArea.innerText = selected.area;
+  mRating.innerText = "Rating: ⭐ " + selected.rating;
+  modal.style.display = "block";
+}
 
-    <section id="contact" style="background: #fff;">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <form id="contactForm">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" rows="5" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
+function closeModal(){ modal.style.display = "none"; }
 
-    <footer>
-        <p>&copy; 2025 John Doe. All rights reserved.</p>
-        <div class="social-links">
-            <a href="https://x.com/yourusername" target="_blank"><i class="fab fa-x-twitter"></i></a>
-            <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
-        </div>
-    </footer>
+function sendBooking(){
+  const msg = encodeURIComponent(
+    `Auto booking\nPickup: ${pickup.value}\nDrop: ${drop.value}`
+  );
+  window.open(`https://wa.me/${selected.phone}?text=${msg}`);
+}
 
-    <script>
-        // Smooth scrolling for navigation
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
+function toggleDark(){
+  document.body.classList.toggle("dark");
+}
 
-        // Contact form submission (placeholder - in real app, connect to backend)
-        document.getElementById('contactForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Message sent! (This is a placeholder)');
-            this.reset();
-        });
+render();
+</script>
 
-        // Extraordinary animation: Particle effect in header (using canvas)
-        const canvas = document.createElement('canvas');
-
-> Amma:
-canvas.style.position = 'absolute';
-        canvas.style.top = '0';
-        canvas.style.left = '0';
-        canvas.style.width = '100%';
-        canvas.style.height = '100%';
-        canvas.style.pointerEvents = 'none';
-        document.querySelector('header').appendChild(canvas);
-
-        const ctx = canvas.getContext('2d');
-        canvas.width = window.innerWidth;
-        canvas.height = document.querySelector('header').offsetHeight;
-
-        class Particle {
-            constructor() {
-                this.x = Math.random() * canvas.width;
-                this.y = Math.random() * canvas.height;
-                this.size = Math.random() * 5 + 1;
-                this.speedX = Math.random() * 3 - 1.5;
-                this.speedY = Math.random() * 3 - 1.5;
-            }
-            update() {
-                this.x += this.speedX;
-                this.y += this.speedY;
-                if (this.size > 0.2) this.size -= 0.1;
-            }
-            draw() {
-                ctx.fillStyle = 'rgba(255,255,255,0.8)';
-                ctx.beginPath();
-                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                ctx.fill();
-            }
-        }
-
-        const particles = [];
-        for (let i = 0; i < 100; i++) {
-            particles.push(new Particle());
-        }
-
-        function animateParticles() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            particles.forEach((particle, index) => {
-                particle.update();
-                particle.draw();
-                if (particle.size <= 0.2) {
-                    particles.splice(index, 1);
-                    particles.push(new Particle());
-                }
-            });
-            requestAnimationFrame(animateParticles);
-        }
-        animateParticles();
-
-        // Resize canvas on window resize
-        window.addEventListener('resize', () => {
-            canvas.width = window.innerWidth;
-            canvas.height = document.querySelector('header').offsetHeight;
-        });
-    </script>
 </body>
 </html>
+
